--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ header .title{
    opacity: 0;
 }
 
-#preferences-pane{
+.preferences-pane{
    min-height: 425px;
    height: 70%;
    min-width: 330px;
@@ -89,14 +89,14 @@ header .title{
    background-color: #639DFF;
 }
 
-#preferences-pane .top{
+.preferences-pane .top{
    background-color: #82B1FF;
    margin: auto;
    padding: 0.8em;
    border-radius: 15px 15px 0 0;
 }
 
-#preferences-pane .top-inner{
+.preferences-pane .top-inner{
    margin: auto;
    background-color: #448AFF;
    padding: 0.35em;
@@ -105,7 +105,7 @@ header .title{
    border-radius: 10px;
 }
 
-#preferences-pane .top-inner p{
+.preferences-pane .top-inner p{
    font-family: "Nunito";
    font-weight: 300;
    color: #E3F2FD;
@@ -113,7 +113,7 @@ header .title{
    margin: 0;
 }
 
-#preferences-pane .bottom{
+.preferences-pane .bottom{
    bottom: 0px;
    left: 0px;
    right: 0px;
@@ -124,15 +124,15 @@ header .title{
    padding: 0.83em;
 }
 
-#preferences-pane .bottom table{
+.preferences-pane .bottom table{
    margin: 0 auto;
 }
 
-#preferences-pane .bottom td{
+.preferences-pane .bottom td{
    padding: 0 5px;
 }
 
-#preferences-pane .bottom button{
+.preferences-pane .bottom button{
    border-radius: 10px;
    padding: 3px 15px;
    width: 100px;
@@ -146,57 +146,57 @@ header .title{
    transition-duration: 0.3s;
 }
 
-#preferences-pane .bottom button:focus {
+.preferences-pane .bottom button:focus {
    outline:0;
 }
 
-#preferences-pane .bottom button.save{
+.preferences-pane .bottom button.save{
    background-color: #E3F2FD;
    color: #448AFF;
 }
 
-#preferences-pane .bottom button.save:hover{
+.preferences-pane .bottom button.save:hover{
    background-color: #99CBFE;
 }
 
-#preferences-pane .bottom button.cancel{
+.preferences-pane .bottom button.cancel{
    background-color: #FFEBEE;
    color: #E57373;
 }
 
-#preferences-pane .bottom button.cancel:hover{
+.preferences-pane .bottom button.cancel:hover{
    background-color: #F8BBC4;
 }
 
-#preferences-pane .body{
+.preferences-pane .body{
    font-family: "Open Sans";
    height: inherit;
    overflow-y: scroll;
 }
 
-#preferences-pane .body .emailsection{
+.preferences-pane .body .emailsection{
    background-color: #375E9F;
 }
 
-#preferences-pane .body h1{
+.preferences-pane .body h1{
    margin:0;
    font-size: 1.3em;
    font-weight: 500;
    color: #E3F2FD;
 }
 
-#preferences-pane .body td{
+.preferences-pane .body td{
    padding: 15px 15px 5px 15px;
 }
 
-#preferences-pane .body p{
+.preferences-pane .body p{
    margin:0;
    font-size: 1.1em;
    font-weight: 300;
    color: #C9DEFF;
 }
 
-#preferences-pane .body .content-organizer{
+.preferences-pane .body .content-organizer{
    left: 0;
    right: 0;
    width: 100%;
@@ -204,13 +204,13 @@ header .title{
    padding: 0;
 }
 
-#preferences-pane .body .content-organizer tr{
+.preferences-pane .body .content-organizer tr{
    margin: auto;
    border: 0;
    padding: 0;
 }
 
-#preferences-pane .body .content-organizer td{
+.preferences-pane .body .content-organizer td{
    padding: 6px 2px ;
    margin: 0;
    width: 100%;
@@ -342,6 +342,38 @@ header .title{
 #mediumspacer{
    height: 15px;
 }
+
+.preferences-pane .main :-webkit-scrollbar{
+   width: 12px;
+   background-color: #314C79;
+}
+
+.preferences-pane .main ::-webkit-scrollbar-thumb{
+   border-radius: 10px;
+   background-color: #8EB9FF;
+}
+
+.preferences-pane .main ::-webkit-scrollbar-track{
+   border-radius: 10px;
+   background-color: #314C79;
+}
+
+/*
+.file-selector-info ::-webkit-scrollbar{
+   width: 6px;
+   background-color: white;
+   opacity: 0;
+}
+
+.file-selector-info ::-webkit-scrollbar-thumb{
+   background-color: #5D92EA;
+}
+
+.file-selector-info ::-webkit-scrollbar-track{
+   background-color: white;
+   opacity: 0;
+}
+*/
 
 #no-file-selected{
    border-radius: 15px;
